# PFE.code

./: .gitignore  README_utilisation_git.txt  common.h  toolchain.cmake
Explo/Explo_Guenael/: guard.c  guard.h
Explo/Explo_Guenael/guard/: archivist.c  archivist.h  guard.c  guard.h  visiolock.db
Explo/Explo_Guenael/manager/: manager.c  manager.h
Explo/Explo_Mateo/: Visio_v2App
Explo/Explo_Mateo/Ecrans/: CMakeLists.txt  Ecrans.qmlproject  qmlmodules  (+1 more)
Explo/Explo_Matthieu/Visiolock/: CMakeLists.txt  Visiolock.qmlproject  qmlmodules
Explo/Explo_Matthieu/Visiolock/content/: AccueilAdmin.qml  AccueilResult.qml  AddUserNameFirstname.qml  AddUserPicture.qml  AddUserRoleAccess.qml  Blank.qml  CMakeLists.txt  ModifyUserPictureForm.ui.qml  ModifyUserResume.qml  ParametersAdminForm.ui.qml  PasswordAdmin.qml
Explo/Explo_Matthieu/Visiolock/imports/Visiolock/: CMakeLists.txt
Explo/Explo_Matthieu/Visiolock/src/: GuiController.h  GuiModel.cpp  GuiModel.h  Makefile  common.h  main.cpp
Explo/Explo_Matthieu/Visiolock/src/ai/: ai.c  ai.h
Explo/Explo_Matthieu/Visiolock/src/archivist/: archivist.c  archivist.h
Explo/Explo_Matthieu/Visiolock/src/doorman/: doorman.c  doorman.h
Explo/Explo_Matthieu/Visiolock/src/guard/: guard.c  guard.h
Explo/Explo_Matthieu/Visiolock/src/gui/: gui.c  gui.h
Explo/Explo_Matthieu/Visiolock/src/manager/: Makefile  manager.c
Explo/Explo_Matthieu/Visiolock/src/rfid/: rfid.c
Explo/Explo_Paul/: test.c
Explo/Explo_Valentin/: Makefile  RFID.c  RFID.h  doorman.c  doorman.h  mfrc.c  mfrc.h  read.c  read.h  test.c
Production/: Makefile  Makefile_cross  archivist.c  archivist.h  brain.c  brain.h  client_gui.c  common.h  dispatcher.c  dispatcher.h  doorman.c  doorman.h  face_reco.py  guard.c  guard.h  gui.h  manager.c  manager.h  postman.c  postman.h  protocol.c  protocol.h  proxyGui.c  proxyGui.h  read.py  rfid.c  starter.c  visiolock.db
Production/src/: Makefile  starter.c
(+1139 files in other folders)
